log-output-read-write/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: logoutput-dep
  namespace: exercises
spec:
  replicas: 1
  selector:
    matchLabels:
      app: log-output
  template:
    metadata:
      labels:
        app: log-output
    spec:
      volumes:
        - name: shared-log
          emptyDir: {}
        - name: log-output-config-volume
          configMap:
            name: log-output-config
            items:
              - key: information.txt
                path: information.txt
      containers:
        - name: log-output-writer
          image: PROJECT/LOG_OUTPUT_WRITER
          volumeMounts:
            - name: shared-log
              mountPath: /usr/src/app/files

        - name: log-output-reader
          image: PROJECT/LOG_OUTPUT_READER
          readinessProbe:
            httpGet:
              path: /healthz
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 5
            failureThreshold: 3
          volumeMounts:
            - name: shared-log
              mountPath: /usr/src/app/files
            - name: log-output-config-volume
              mountPath: /usr/src/app/config
              readOnly: true
